qt/gen_qboxlayout.h

typedef struct QBoxLayout QBoxLayout;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QLayout QLayout;
typedef struct QLayoutItem QLayoutItem;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QRect QRect;
typedef struct QSize QSize;
typedef struct QSpacerItem QSpacerItem;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWidget QWidget;
QBoxLayout* QBoxLayout_new(int param1);
QBoxLayout* QBoxLayout_new2(int param1, QWidget* parent);
QMetaObject* QBoxLayout_metaObject(const QBoxLayout* self);
void* QBoxLayout_metacast(QBoxLayout* self, const char* param1);
int QBoxLayout_metacall(QBoxLayout* self, int param1, int param2, void** param3);
struct miqt_string QBoxLayout_tr(const char* s);
struct miqt_string QBoxLayout_trUtf8(const char* s);
int QBoxLayout_direction(const QBoxLayout* self);
void QBoxLayout_setDirection(QBoxLayout* self, int direction);
void QBoxLayout_addSpacing(QBoxLayout* self, int size);
void QBoxLayout_addStretch(QBoxLayout* self);
void QBoxLayout_addSpacerItem(QBoxLayout* self, QSpacerItem* spacerItem);
void QBoxLayout_addWidget(QBoxLayout* self, QWidget* param1);
void QBoxLayout_addLayout(QBoxLayout* self, QLayout* layout);
void QBoxLayout_addStrut(QBoxLayout* self, int param1);
void QBoxLayout_addItem(QBoxLayout* self, QLayoutItem* param1);
void QBoxLayout_insertSpacing(QBoxLayout* self, int index, int size);
void QBoxLayout_insertStretch(QBoxLayout* self, int index);
void QBoxLayout_insertSpacerItem(QBoxLayout* self, int index, QSpacerItem* spacerItem);
void QBoxLayout_insertWidget(QBoxLayout* self, int index, QWidget* widget);
void QBoxLayout_insertLayout(QBoxLayout* self, int index, QLayout* layout);
void QBoxLayout_insertItem(QBoxLayout* self, int index, QLayoutItem* param2);
int QBoxLayout_spacing(const QBoxLayout* self);
void QBoxLayout_setSpacing(QBoxLayout* self, int spacing);
bool QBoxLayout_setStretchFactor(QBoxLayout* self, QWidget* w, int stretch);
bool QBoxLayout_setStretchFactor2(QBoxLayout* self, QLayout* l, int stretch);
void QBoxLayout_setStretch(QBoxLayout* self, int index, int stretch);
int QBoxLayout_stretch(const QBoxLayout* self, int index);
QSize* QBoxLayout_sizeHint(const QBoxLayout* self);
QSize* QBoxLayout_minimumSize(const QBoxLayout* self);
QSize* QBoxLayout_maximumSize(const QBoxLayout* self);
bool QBoxLayout_hasHeightForWidth(const QBoxLayout* self);
int QBoxLayout_heightForWidth(const QBoxLayout* self, int param1);
int QBoxLayout_minimumHeightForWidth(const QBoxLayout* self, int param1);
int QBoxLayout_expandingDirections(const QBoxLayout* self);
void QBoxLayout_invalidate(QBoxLayout* self);
QLayoutItem* QBoxLayout_itemAt(const QBoxLayout* self, int param1);
QLayoutItem* QBoxLayout_takeAt(QBoxLayout* self, int param1);
int QBoxLayout_count(const QBoxLayout* self);
void QBoxLayout_setGeometry(QBoxLayout* self, QRect* geometry);
struct miqt_string QBoxLayout_tr2(const char* s, const char* c);
struct miqt_string QBoxLayout_tr3(const char* s, const char* c, int n);
struct miqt_string QBoxLayout_trUtf82(const char* s, const char* c);
struct miqt_string QBoxLayout_trUtf83(const char* s, const char* c, int n);
void QBoxLayout_addStretch1(QBoxLayout* self, int stretch);
void QBoxLayout_addWidget2(QBoxLayout* self, QWidget* param1, int stretch);
void QBoxLayout_addWidget3(QBoxLayout* self, QWidget* param1, int stretch, int alignment);
void QBoxLayout_addLayout2(QBoxLayout* self, QLayout* layout, int stretch);
void QBoxLayout_insertStretch2(QBoxLayout* self, int index, int stretch);
void QBoxLayout_insertWidget3(QBoxLayout* self, int index, QWidget* widget, int stretch);
void QBoxLayout_insertWidget4(QBoxLayout* self, int index, QWidget* widget, int stretch, int alignment);
void QBoxLayout_insertLayout3(QBoxLayout* self, int index, QLayout* layout, int stretch);
bool QBoxLayout_override_virtual_metacall(void* self, intptr_t slot);
int QBoxLayout_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QBoxLayout_override_virtual_addItem(void* self, intptr_t slot);
void QBoxLayout_virtualbase_addItem(void* self, QLayoutItem* param1);
bool QBoxLayout_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QBoxLayout_virtualbase_sizeHint(const void* self);
bool QBoxLayout_override_virtual_minimumSize(void* self, intptr_t slot);
QSize* QBoxLayout_virtualbase_minimumSize(const void* self);
bool QBoxLayout_override_virtual_maximumSize(void* self, intptr_t slot);
QSize* QBoxLayout_virtualbase_maximumSize(const void* self);
bool QBoxLayout_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QBoxLayout_virtualbase_hasHeightForWidth(const void* self);
bool QBoxLayout_override_virtual_heightForWidth(void* self, intptr_t slot);
int QBoxLayout_virtualbase_heightForWidth(const void* self, int param1);
bool QBoxLayout_override_virtual_minimumHeightForWidth(void* self, intptr_t slot);
int QBoxLayout_virtualbase_minimumHeightForWidth(const void* self, int param1);
bool QBoxLayout_override_virtual_expandingDirections(void* self, intptr_t slot);
int QBoxLayout_virtualbase_expandingDirections(const void* self);
bool QBoxLayout_override_virtual_invalidate(void* self, intptr_t slot);
void QBoxLayout_virtualbase_invalidate(void* self);
bool QBoxLayout_override_virtual_itemAt(void* self, intptr_t slot);
QLayoutItem* QBoxLayout_virtualbase_itemAt(const void* self, int param1);
bool QBoxLayout_override_virtual_takeAt(void* self, intptr_t slot);
QLayoutItem* QBoxLayout_virtualbase_takeAt(void* self, int param1);
bool QBoxLayout_override_virtual_count(void* self, intptr_t slot);
int QBoxLayout_virtualbase_count(const void* self);
bool QBoxLayout_override_virtual_setGeometry(void* self, intptr_t slot);
void QBoxLayout_virtualbase_setGeometry(void* self, QRect* geometry);
bool QBoxLayout_override_virtual_geometry(void* self, intptr_t slot);
QRect* QBoxLayout_virtualbase_geometry(const void* self);
bool QBoxLayout_override_virtual_indexOf(void* self, intptr_t slot);
int QBoxLayout_virtualbase_indexOf(const void* self, QWidget* param1);
bool QBoxLayout_override_virtual_isEmpty(void* self, intptr_t slot);
bool QBoxLayout_virtualbase_isEmpty(const void* self);
bool QBoxLayout_override_virtual_controlTypes(void* self, intptr_t slot);
int QBoxLayout_virtualbase_controlTypes(const void* self);
bool QBoxLayout_override_virtual_layout(void* self, intptr_t slot);
QLayout* QBoxLayout_virtualbase_layout(void* self);
bool QBoxLayout_override_virtual_childEvent(void* self, intptr_t slot);
void QBoxLayout_virtualbase_childEvent(void* self, QChildEvent* e);
bool QBoxLayout_override_virtual_event(void* self, intptr_t slot);
bool QBoxLayout_virtualbase_event(void* self, QEvent* event);
bool QBoxLayout_override_virtual_eventFilter(void* self, intptr_t slot);
bool QBoxLayout_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QBoxLayout_override_virtual_timerEvent(void* self, intptr_t slot);
void QBoxLayout_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QBoxLayout_override_virtual_customEvent(void* self, intptr_t slot);
void QBoxLayout_virtualbase_customEvent(void* self, QEvent* event);
bool QBoxLayout_override_virtual_connectNotify(void* self, intptr_t slot);
void QBoxLayout_virtualbase_connectNotify(void* self, QMetaMethod* signal);
void QBoxLayout_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);