qt/gen_qboxlayout.nim


proc fcQBoxLayout_new(param1: cint): ptr cQBoxLayout {.importc: "QBoxLayout_new".}
proc fcQBoxLayout_new2(param1: cint, parent: pointer): ptr cQBoxLayout {.importc: "QBoxLayout_new2".}
proc fcQBoxLayout_metaObject(self: pointer, ): pointer {.importc: "QBoxLayout_metaObject".}
proc fcQBoxLayout_metacast(self: pointer, param1: cstring): pointer {.importc: "QBoxLayout_metacast".}
proc fcQBoxLayout_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QBoxLayout_metacall".}
proc fcQBoxLayout_tr(s: cstring): struct_miqt_string {.importc: "QBoxLayout_tr".}
proc fcQBoxLayout_trUtf8(s: cstring): struct_miqt_string {.importc: "QBoxLayout_trUtf8".}
proc fcQBoxLayout_direction(self: pointer, ): cint {.importc: "QBoxLayout_direction".}
proc fcQBoxLayout_setDirection(self: pointer, direction: cint): void {.importc: "QBoxLayout_setDirection".}
proc fcQBoxLayout_addSpacing(self: pointer, size: cint): void {.importc: "QBoxLayout_addSpacing".}
proc fcQBoxLayout_addStretch(self: pointer, ): void {.importc: "QBoxLayout_addStretch".}
proc fcQBoxLayout_addSpacerItem(self: pointer, spacerItem: pointer): void {.importc: "QBoxLayout_addSpacerItem".}
proc fcQBoxLayout_addWidget(self: pointer, param1: pointer): void {.importc: "QBoxLayout_addWidget".}
proc fcQBoxLayout_addLayout(self: pointer, layout: pointer): void {.importc: "QBoxLayout_addLayout".}
proc fcQBoxLayout_addStrut(self: pointer, param1: cint): void {.importc: "QBoxLayout_addStrut".}
proc fcQBoxLayout_addItem(self: pointer, param1: pointer): void {.importc: "QBoxLayout_addItem".}
proc fcQBoxLayout_insertSpacing(self: pointer, index: cint, size: cint): void {.importc: "QBoxLayout_insertSpacing".}
proc fcQBoxLayout_insertStretch(self: pointer, index: cint): void {.importc: "QBoxLayout_insertStretch".}
proc fcQBoxLayout_insertSpacerItem(self: pointer, index: cint, spacerItem: pointer): void {.importc: "QBoxLayout_insertSpacerItem".}
proc fcQBoxLayout_insertWidget(self: pointer, index: cint, widget: pointer): void {.importc: "QBoxLayout_insertWidget".}
proc fcQBoxLayout_insertLayout(self: pointer, index: cint, layout: pointer): void {.importc: "QBoxLayout_insertLayout".}
proc fcQBoxLayout_insertItem(self: pointer, index: cint, param2: pointer): void {.importc: "QBoxLayout_insertItem".}
proc fcQBoxLayout_spacing(self: pointer, ): cint {.importc: "QBoxLayout_spacing".}
proc fcQBoxLayout_setSpacing(self: pointer, spacing: cint): void {.importc: "QBoxLayout_setSpacing".}
proc fcQBoxLayout_setStretchFactor(self: pointer, w: pointer, stretch: cint): bool {.importc: "QBoxLayout_setStretchFactor".}
proc fcQBoxLayout_setStretchFactor2(self: pointer, l: pointer, stretch: cint): bool {.importc: "QBoxLayout_setStretchFactor2".}
proc fcQBoxLayout_setStretch(self: pointer, index: cint, stretch: cint): void {.importc: "QBoxLayout_setStretch".}
proc fcQBoxLayout_stretch(self: pointer, index: cint): cint {.importc: "QBoxLayout_stretch".}
proc fcQBoxLayout_sizeHint(self: pointer, ): pointer {.importc: "QBoxLayout_sizeHint".}
proc fcQBoxLayout_minimumSize(self: pointer, ): pointer {.importc: "QBoxLayout_minimumSize".}
proc fcQBoxLayout_maximumSize(self: pointer, ): pointer {.importc: "QBoxLayout_maximumSize".}
proc fcQBoxLayout_hasHeightForWidth(self: pointer, ): bool {.importc: "QBoxLayout_hasHeightForWidth".}
proc fcQBoxLayout_heightForWidth(self: pointer, param1: cint): cint {.importc: "QBoxLayout_heightForWidth".}
proc fcQBoxLayout_minimumHeightForWidth(self: pointer, param1: cint): cint {.importc: "QBoxLayout_minimumHeightForWidth".}
proc fcQBoxLayout_expandingDirections(self: pointer, ): cint {.importc: "QBoxLayout_expandingDirections".}
proc fcQBoxLayout_invalidate(self: pointer, ): void {.importc: "QBoxLayout_invalidate".}
proc fcQBoxLayout_itemAt(self: pointer, param1: cint): pointer {.importc: "QBoxLayout_itemAt".}
proc fcQBoxLayout_takeAt(self: pointer, param1: cint): pointer {.importc: "QBoxLayout_takeAt".}
proc fcQBoxLayout_count(self: pointer, ): cint {.importc: "QBoxLayout_count".}
proc fcQBoxLayout_setGeometry(self: pointer, geometry: pointer): void {.importc: "QBoxLayout_setGeometry".}
proc fcQBoxLayout_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QBoxLayout_tr2".}
proc fcQBoxLayout_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QBoxLayout_tr3".}
proc fcQBoxLayout_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QBoxLayout_trUtf82".}
proc fcQBoxLayout_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QBoxLayout_trUtf83".}
proc fcQBoxLayout_addStretch1(self: pointer, stretch: cint): void {.importc: "QBoxLayout_addStretch1".}
proc fcQBoxLayout_addWidget2(self: pointer, param1: pointer, stretch: cint): void {.importc: "QBoxLayout_addWidget2".}
proc fcQBoxLayout_addWidget3(self: pointer, param1: pointer, stretch: cint, alignment: cint): void {.importc: "QBoxLayout_addWidget3".}
proc fcQBoxLayout_addLayout2(self: pointer, layout: pointer, stretch: cint): void {.importc: "QBoxLayout_addLayout2".}
proc fcQBoxLayout_insertStretch2(self: pointer, index: cint, stretch: cint): void {.importc: "QBoxLayout_insertStretch2".}
proc fcQBoxLayout_insertWidget3(self: pointer, index: cint, widget: pointer, stretch: cint): void {.importc: "QBoxLayout_insertWidget3".}
proc fcQBoxLayout_insertWidget4(self: pointer, index: cint, widget: pointer, stretch: cint, alignment: cint): void {.importc: "QBoxLayout_insertWidget4".}
proc fcQBoxLayout_insertLayout3(self: pointer, index: cint, layout: pointer, stretch: cint): void {.importc: "QBoxLayout_insertLayout3".}
proc fQBoxLayout_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QBoxLayout_virtualbase_metacall".}
proc fcQBoxLayout_override_virtual_metacall(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_metacall".}
proc fQBoxLayout_virtualbase_addItem(self: pointer, param1: pointer): void{.importc: "QBoxLayout_virtualbase_addItem".}
proc fcQBoxLayout_override_virtual_addItem(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_addItem".}
proc fQBoxLayout_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QBoxLayout_virtualbase_sizeHint".}
proc fcQBoxLayout_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_sizeHint".}
proc fQBoxLayout_virtualbase_minimumSize(self: pointer, ): pointer{.importc: "QBoxLayout_virtualbase_minimumSize".}
proc fcQBoxLayout_override_virtual_minimumSize(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_minimumSize".}
proc fQBoxLayout_virtualbase_maximumSize(self: pointer, ): pointer{.importc: "QBoxLayout_virtualbase_maximumSize".}
proc fcQBoxLayout_override_virtual_maximumSize(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_maximumSize".}
proc fQBoxLayout_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QBoxLayout_virtualbase_hasHeightForWidth".}
proc fcQBoxLayout_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_hasHeightForWidth".}
proc fQBoxLayout_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QBoxLayout_virtualbase_heightForWidth".}
proc fcQBoxLayout_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_heightForWidth".}
proc fQBoxLayout_virtualbase_minimumHeightForWidth(self: pointer, param1: cint): cint{.importc: "QBoxLayout_virtualbase_minimumHeightForWidth".}
proc fcQBoxLayout_override_virtual_minimumHeightForWidth(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_minimumHeightForWidth".}
proc fQBoxLayout_virtualbase_expandingDirections(self: pointer, ): cint{.importc: "QBoxLayout_virtualbase_expandingDirections".}
proc fcQBoxLayout_override_virtual_expandingDirections(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_expandingDirections".}
proc fQBoxLayout_virtualbase_invalidate(self: pointer, ): void{.importc: "QBoxLayout_virtualbase_invalidate".}
proc fcQBoxLayout_override_virtual_invalidate(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_invalidate".}
proc fQBoxLayout_virtualbase_itemAt(self: pointer, param1: cint): pointer{.importc: "QBoxLayout_virtualbase_itemAt".}
proc fcQBoxLayout_override_virtual_itemAt(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_itemAt".}
proc fQBoxLayout_virtualbase_takeAt(self: pointer, param1: cint): pointer{.importc: "QBoxLayout_virtualbase_takeAt".}
proc fcQBoxLayout_override_virtual_takeAt(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_takeAt".}
proc fQBoxLayout_virtualbase_count(self: pointer, ): cint{.importc: "QBoxLayout_virtualbase_count".}
proc fcQBoxLayout_override_virtual_count(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_count".}
proc fQBoxLayout_virtualbase_setGeometry(self: pointer, geometry: pointer): void{.importc: "QBoxLayout_virtualbase_setGeometry".}
proc fcQBoxLayout_override_virtual_setGeometry(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_setGeometry".}
proc fQBoxLayout_virtualbase_geometry(self: pointer, ): pointer{.importc: "QBoxLayout_virtualbase_geometry".}
proc fcQBoxLayout_override_virtual_geometry(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_geometry".}
proc fQBoxLayout_virtualbase_indexOf(self: pointer, param1: pointer): cint{.importc: "QBoxLayout_virtualbase_indexOf".}
proc fcQBoxLayout_override_virtual_indexOf(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_indexOf".}
proc fQBoxLayout_virtualbase_isEmpty(self: pointer, ): bool{.importc: "QBoxLayout_virtualbase_isEmpty".}
proc fcQBoxLayout_override_virtual_isEmpty(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_isEmpty".}
proc fQBoxLayout_virtualbase_controlTypes(self: pointer, ): cint{.importc: "QBoxLayout_virtualbase_controlTypes".}
proc fcQBoxLayout_override_virtual_controlTypes(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_controlTypes".}
proc fQBoxLayout_virtualbase_layout(self: pointer, ): pointer{.importc: "QBoxLayout_virtualbase_layout".}
proc fcQBoxLayout_override_virtual_layout(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_layout".}
proc fQBoxLayout_virtualbase_childEvent(self: pointer, e: pointer): void{.importc: "QBoxLayout_virtualbase_childEvent".}
proc fcQBoxLayout_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_childEvent".}
proc fQBoxLayout_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QBoxLayout_virtualbase_event".}
proc fcQBoxLayout_override_virtual_event(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_event".}
proc fQBoxLayout_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QBoxLayout_virtualbase_eventFilter".}
proc fcQBoxLayout_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_eventFilter".}
proc fQBoxLayout_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QBoxLayout_virtualbase_timerEvent".}
proc fcQBoxLayout_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_timerEvent".}
proc fQBoxLayout_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QBoxLayout_virtualbase_customEvent".}
proc fcQBoxLayout_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_customEvent".}
proc fQBoxLayout_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QBoxLayout_virtualbase_connectNotify".}
proc fcQBoxLayout_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QBoxLayout_override_virtual_connectNotify".}
proc fQBoxLayout_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QBoxLayout_virtualbase_disconnectNotify".}
